objects/Manual_Requirements__mdt.object
<CustomObject>
    <description>Requirements metadata that are manually created are stored here.</description>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <label>Applicant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant</fullName>
                    <default>true</default>
                    <label>Applicant</label>
                </value>
                <value>
                    <fullName>Co-Applicant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>TS</fullName>
                    <default>true</default>
                    <label>TS</label>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>Post-Close Specialist</fullName>
                </value>
                <value>
                    <fullName>IM Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assets</fullName>
                    <default>true</default>
                    <label>Assets</label>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debt Reduction</fullName>
                </value>
                <value>
                    <fullName>Final Approval</fullName>
                </value>
                <value>
                    <fullName>HB Application Package</fullName>
                </value>
                <value>
                    <fullName>Home Condition</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Investment Due Diligence</fullName>
                </value>
                <value>
                    <fullName>Liabilities</fullName>
                </value>
                <value>
                    <fullName>Lien</fullName>
                </value>
                <value>
                    <fullName>MAD</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Post-Closing</fullName>
                </value>
                <value>
                    <fullName>Rider</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Stage Tasks</fullName>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
                <value>
                    <fullName>Unison Documents</fullName>
                </value>
                <value>
                    <fullName>Valuation</fullName>
                </value>
                <value>
                    <fullName>Application Package</fullName>
                </value>
                <value>
                    <fullName>Verification</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                    <label>Property Ownership</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Code__c</fullName>
        <label>Document Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_vs_External__c</fullName>
        <label>Internal vs External</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                    <default>true</default>
                    <label>External</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSI_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSI Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HomeBuyer</fullName>
                    <default>true</default>
                    <label>HomeBuyer</label>
                </value>
                <value>
                    <fullName>HomeOwner</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Post Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closing</fullName>
                    <default>true</default>
                    <label>Closing</label>
                </value>
                <value>
                    <fullName>Post-Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Factor__c</fullName>
        <label>Success Factor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                    <default>true</default>
                    <label>Credit</label>
                </value>
                <value>
                    <fullName>DTI</fullName>
                </value>
                <value>
                    <fullName>LTV</fullName>
                </value>
                <value>
                    <fullName>OAV</fullName>
                </value>
                <value>
                    <fullName>Property Ownership</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Post-Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Request</fullName>
                    <default>true</default>
                    <label>Data Request</label>
                </value>
                <value>
                    <fullName>Stipulation</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Manual Requirements</label>
    <listViews>
        <fullName>All_columns_view</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Applicant_Type__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Category__c</columns>
        <columns>Code__c</columns>
        <columns>Document_Code__c</columns>
        <columns>Internal_vs_External__c</columns>
        <columns>Record_Type__c</columns>
        <columns>RSI_Eligible__c</columns>
        <columns>Stage__c</columns>
        <columns>Success_Factor__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All columns view</label>
    </listViews>
    <pluralLabel>Manual Requirements</pluralLabel>
</CustomObject>